[gd_scene load_steps=2 format=3 uid="uid://cnvbjdtnnkatd"]

[ext_resource type="Script" path="res://GameObjects/Utilities/Interactable/Interactable Area/interactable_area.gd" id="1_4j4up"]

[node name="InteractableArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_4j4up")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
